# api-oss

./: .gitignore  LICENSE  README.md  credits.yml  deploy.sh  docker-compose.yml
api/: .env.example  Dockerfile  pyproject.toml
api/app/: __init__.py  errors.py  main.py  responses.py  tasks.py  utils.py
api/app/api/: constants.py  dependencies.py  exceptions.py
api/app/api/routes/: route.py
api/app/api/routes/v1/: embeddings.py  models.py  moderations.py
api/app/api/routes/v1/audio/: speech.py  transcriptions.py  translations.py
api/app/api/routes/v1/chat/: completions.py
api/app/api/routes/v1/images/: generations.py  upscale.py
api/app/api/routes/v1/text/: translations.py
api/app/core/: __init__.py  config.py
api/app/core/db/: __init__.py  exceptions.py
api/app/core/db/managers/: __init__.py  provider_manager.py  user_manager.py
api/app/models/: __init__.py  audio_speech.py  chat_completions.py  embeddings.py  images_generations.py  moderations.py  text_translations.py
api/app/providers/: __init__.py  ai_models.py  base_provider.py  utils.py
api/app/providers/multiple/: openai.py
bot/: .env.example  Dockerfile  README.md  pyproject.toml
bot/app/: __init__.py  main.py  utils.py
bot/app/cogs/: __init__.py  misc_cog.py  panel_setup_cog.py  user_cog.py
bot/app/core/: __init__.py  config.py
bot/app/core/db/: __init__.py  user_manager.py
bot/app/views/: __init__.py  control_panel_view.py  faq_view.py  role_info_view.py
secrets/: db.env
zjv3/: README.md  requirements.txt  run.sh
zjv3/api/: main.py
zjv3/data/: credits.yml
(+43 files in other folders)
